--- a/templates/init.groovy.j2
+++ b/templates/init.groovy.j2
@@ -9,7 +9,7 @@ Thread.start {
       sleep 10000
       println "--> setting agent port for jnlp"
       def env = System.getenv()
-      int port = env['JENKINS_SLAVE_AGENT_PORT'].toInteger()
+      int port = {{ jenkins_slave_agent_port }}
       Jenkins.instance.setSlaveAgentPort(port)
       println "--> setting agent port for jnlp... done"
 }
